--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue-router": "^3.0.1",
     "vuetify": "^2.6.11",
     "vuex": "^3.6.2",
+    "vue-awesome-swiper": "^4.1.1",
     "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
