--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "vuetify": "^2.6.11",
     "vuex": "^3.6.2",
     "vue-awesome-swiper": "^4.1.1",
-    "vuex-persistedstate": "^4.1.0"
+    "vuex-persistedstate": "^4.1.0",
+    "vuelidate": "^0.7.7",
+    "v-mask": "^2.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
